<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fragment_user_iv_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/img_personal_avatar"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/fragment_user_tv_location"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/fragment_user_iv_avatar"
        android:text="守护端设备位置"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/es_text_color_btn"
        android:background="@drawable/es_dialog_btn"/>

    <LinearLayout
        android:id="@+id/fragment_user_ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/fragment_user_tv_location"
        android:orientation="vertical"
        android:background="@drawable/bg_layout">
        <RelativeLayout
            android:id="@+id/fragment_user_rl_account"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <com.peter.guardianangel.view.IconFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/x20"
                android:text="@string/setting"
                android:textSize="@dimen/x60"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="账号设置"
                android:textColor="#000"
                android:layout_marginStart="@dimen/x100"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"/>

        <RelativeLayout
            android:id="@+id/fragment_user_rl_share"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <com.peter.guardianangel.view.IconFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/x20"
                android:text="@string/share"
                android:textSize="@dimen/x60"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="应用分享"
                android:textColor="#000"
                android:layout_marginStart="@dimen/x100"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_user_ll_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/fragment_user_ll_main"
        android:orientation="vertical"
        android:background="@drawable/bg_layout">
        <RelativeLayout
            android:id="@+id/fragment_user_rl_update"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <com.peter.guardianangel.view.IconFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/x20"
                android:text="@string/update"
                android:textSize="@dimen/x60"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="检查更新"
                android:textColor="#000"
                android:layout_marginStart="@dimen/x100"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"/>

        <RelativeLayout
            android:id="@+id/fragment_user_rl_feedback"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <com.peter.guardianangel.view.IconFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/x20"
                android:text="@string/feekback"
                android:textSize="@dimen/x60"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="帮助与反馈"
                android:textColor="#000"
                android:layout_marginStart="@dimen/x100"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"/>

        <RelativeLayout
            android:id="@+id/fragment_user_rl_about"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <com.peter.guardianangel.view.IconFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/x20"
                android:text="@string/about"
                android:textSize="@dimen/x60"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="关于"
                android:textColor="#000"
                android:layout_marginStart="@dimen/x100"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>